[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/ActiveAndNonActiveSynergyDisplayer.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/MultipleSynergyDisplayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Separator.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Assets/ActiveSynPanel_Background.png" type="Texture" id=4]

[node name="ActiveAndNonActiveSynergyDisplayer" type="VBoxContainer"]
margin_right = 94.0
margin_bottom = 77.0
mouse_filter = 2
alignment = 2
script = ExtResource( 1 )

[node name="NonActiveCompositionSeparator" parent="." instance=ExtResource( 3 )]
margin_right = 94.0
margin_bottom = 18.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Non-active Groups"

[node name="NonActiveCompositionSynergies" parent="." instance=ExtResource( 2 )]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 22.0
custom_constants/margin_left = 3

[node name="NonActiveDominantSeparator" parent="." instance=ExtResource( 3 )]
margin_top = 26.0
margin_right = 94.0
margin_bottom = 44.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Non-active Dominants"

[node name="NonActiveDominantSynergies" parent="." instance=ExtResource( 2 )]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 54.0
custom_constants/margin_left = 3
custom_constants/margin_bottom = 6

[node name="ActivePanel" type="MarginContainer" parent="."]
margin_top = 58.0
margin_right = 94.0
margin_bottom = 86.0

[node name="MarginContainer" type="MarginContainer" parent="ActivePanel"]
margin_right = 94.0
margin_bottom = 28.0

[node name="Background" type="TextureRect" parent="ActivePanel/MarginContainer"]
margin_right = 94.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ActivePanel"]
margin_right = 94.0
margin_bottom = 28.0

[node name="ActiveSeparator" parent="ActivePanel/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 94.0
margin_bottom = 18.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Active Synergies:"

[node name="ActiveSynergies" parent="ActivePanel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 22.0
margin_right = 94.0
margin_bottom = 28.0
custom_constants/margin_left = 3
custom_constants/margin_bottom = 6
